# hakaton

./: .gitignore  award_badges.csv  courses_stats.csv  dump-xakaton-202603310120.sql  dump-xakaton-202604051329.backup  hakaton_bd.backup  lessons.csv  readme.md  students_of_interest.csv  trainings.csv  user_answers.csv  user_award_badges.csv  user_courses.csv  user_lessons.csv  user_schoolclass_histories.csv  user_trainings.csv  user_watched_depth.csv  videos_watched_stats.csv  wk_users_courses_actions.csv
backend/: CMakeLists.txt  Dockerfile  Dockerfile.postgres  README.md  config.docker.json  config.json  docker-compose.yaml  dump-xakaton-202603310120.sql  env.example  main.cc  main.cpp  task.md
backend/constants/: progress_constants.h
backend/controllers/Attendance/: yearreporter_api_v1_Attendance.cc  yearreporter_api_v1_Attendance.h
backend/controllers/AverageScore/: yearreporter_api_v1_AverageScore.cc  yearreporter_api_v1_AverageScore.h
backend/controllers/AwardBadges/: yearreporter_api_v1_AwardBadgesCount.cc  yearreporter_api_v1_AwardBadgesCount.h  yearreporter_api_v1_AwardBadgesLevels.cc  yearreporter_api_v1_AwardBadgesLevels.h  yearreporter_api_v1_AwardBadgesRarest.cc  yearreporter_api_v1_AwardBadgesRarest.h
backend/controllers/Chronotype/: yearreporter_api_v1_Chronotype.cc  yearreporter_api_v1_Chronotype.h
backend/controllers/ClassTextDepthRank/: yearreporter_api_v1_ClassTextDepthRank.cc  yearreporter_api_v1_ClassTextDepthRank.h
backend/controllers/Conspects/: yearreporter_api_v1_Conspects.cc  yearreporter_api_v1_Conspects.h
backend/controllers/FirstVideoStarter/: yearreporter_api_v1_FirstVideoStarter.cc  yearreporter_api_v1_FirstVideoStarter.h
backend/controllers/HomeworkTasks/: yearreporter_api_v1_HomeworkTasks.cc  yearreporter_api_v1_HomeworkTasks.h
backend/controllers/LessonTasks/: yearreporter_api_v1_LessonTasks.cc  yearreporter_api_v1_LessonTasks.h
backend/controllers/Media/: yearreporter_api_v1_Media.cc  yearreporter_api_v1_Media.h
backend/controllers/PartialCreditShare/: yearreporter_api_v1_PartialCreditShare.cc  yearreporter_api_v1_PartialCreditShare.h
backend/controllers/Perseverance/: yearreporter_api_v1_Perseverance.cc  yearreporter_api_v1_Perseverance.h
backend/controllers/Points/: yearreporter_api_v1_Points.cc  yearreporter_api_v1_Points.h
backend/controllers/Progress/: yearreporter_api_v1_Progress.cc  yearreporter_api_v1_Progress.h
backend/controllers/RareLessons/: yearreporter_api_v1_RareLessons.cc  yearreporter_api_v1_RareLessons.h
backend/controllers/RarestVisitedLesson/: yearreporter_api_v1_RarestVisitedLesson.cc  yearreporter_api_v1_RarestVisitedLesson.h
backend/controllers/RegionPointsRank/: yearreporter_api_v1_RegionPointsRank.cc  yearreporter_api_v1_RegionPointsRank.h
backend/controllers/SchoolVideoRank/: yearreporter_api_v1_SchoolVideoRank.cc  yearreporter_api_v1_SchoolVideoRank.h
backend/controllers/SolvedLessons/: yearreporter_api_v1_SolvedLessons.cc  yearreporter_api_v1_SolvedLessons.h
backend/postgres-init/: 01-restore-dump.sh
backend/services/: AwardBadgesService.cc  AwardBadgesService.h  ChronotypeService.cc  ChronotypeService.h  CourseMetricsService.cc  CourseMetricsService.h  LessonAchievementsService.cc  LessonAchievementsService.h  MediaStatsService.cc  MediaStatsService.h  PartialCreditShareService.cc  PartialCreditShareService.h  PerseveranceService.cc  PerseveranceService.h  ProgressService.cc  ProgressService.h  SchoolRankingsService.cc  SchoolRankingsService.h  SocialRankingsService.cc  SocialRankingsService.h  StudyRecommendationsService.cc  StudyRecommendationsService.h  TaskStatsService.cc  TaskStatsService.h  TrainingInsightsService.cc  TrainingInsightsService.h  VideoStoryService.cc  VideoStoryService.h
backend/sql/: import_extra_tables.sql  load_extra_tables_from_tmp.sql
(+33 files in other folders)
